<resources>
    <string name="app_name">InventoryApp</string>
    <string name="action_insert_dummy_data">insert dummy data</string>
    <string name="action_delete_all_entries">delete table</string>
    <string name="add_mode_title">Add new Item</string>
    <string name="edit_mode_title">Edit Item</string>
    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current item [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>
    <!-- Dialog message to ask the user to confirm deleting the current item [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this item?</string>

    <!-- Dialog button text for the option to confirm deleting the current item [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current item [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>
    <string name="product_name">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="item_name">item name</string>
    <string name="item">Item</string>
    <string name="price_unit">€</string>
    <string name="price_of_one_item">Price of one item</string>
    <string name="supplier">Supplier</string>
    <string name="name_of_the_supplier">Name of the supplier</string>
    <string name="product">Product</string>
    <string name="phone">Phone</string>
    <string name="phone_number">Phone number</string>
    <string name="call_supplier">Call Supplier</string>
    <string name="add">add</string>
    <string name="take">take</string>
    <string name="empty_view">Insert Data to get started</string>
    <string name="quantity_view">Quantity:</string>
    <string name="currency">€</string>
    <string name="quantity_list">Quantity:</string>
    <string name="currency_list">€</string>
    <string name="price_list">Price:</string>
    <string name="sell_list">Sell</string>
</resources>
